# ece2400-sec07-2025

./: CMakeLists.txt
eval/: CMakeLists.txt  insertion-sort-eval.c  isort-int-eval.c  selection-sort-int-eval.c
include/: ece2400-stdlib.h  selection-sort-int.h
scripts/: eval.sh  selection-sort-int-plot.py
src/: CMakeLists.txt  ece2400-stdlib.c  ece2400-stdlib.h  insertion-sort-adhoc.c  insertion-sort.c  isort-int-adhoc.c  isort-int.c  isort-int.h  selection-sort-int-adhoc  selection-sort-int-adhoc.c  selection-sort-int.c  selection-sort-int.h
test/: CMakeLists.txt  insertion-sort-directed-test.c  isort-int-directed-test.c  selection-sort-int-directed-test.c  selection-sort-int-helper-test.c
